[package]
name = "payengine"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
csv = "*"
structopt = "*"
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
fnv = "*"
shrinkwraprs = "0.3.0"
